ansible/roles/cilium/files/network-policies/etcd.yml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: etcd
spec:
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: 'true'
  ingress:
    - fromEntities:
        - remote-node
      toEntities:
        - host
      toPorts:
        - ports:
            - port: '2379'
              protocol: TCP
            - port: '2380'
              protocol: TCP
  egress:
    - fromEntities:
        - host
      toEntities:
        - remote-node
      toPorts:
        - ports:
            - port: '2379'
              protocol: TCP
            - port: '2380'
              protocol: TCP
