ansible/roles/cilium/files/network-policies/node.yml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: node
specs:
  - nodeSelector:
      matchLabels: {}
    ingress:
      - fromEntities:
          - all
        toEntities:
          - host
        toPorts:
          - ports:
              # SSH
              - port: '22'
                protocol: TCP
      - fromEntities:
          - all
        toEntities:
          - host
        icmps:
          - fields:
              - type: 8
                family: IPv4
              - type: 128
                family: IPv6
              - type: 135
                family: IPv6
    egress:
      - toEntities:
          - all
        fromEntities:
          - host
        toPorts:
          - ports:
              # DNS
              - port: '53'
                protocol: TCP
              - port: '53'
                protocol: UDP
              - port: '853'
                protocol: TCP
              # NTP
              - port: '123'
                protocol: UDP
              # HTTP
              - port: '80'
                protocol: TCP
              # HTTPS
              - port: '443'
                protocol: TCP
              - port: '443'
                protocol: UDP
              # Kubernetes API
              - port: '6443'
                protocol: TCP
      - toEntities:
          - all
        fromEntities:
          - host
        icmps:
          - fields:
              - type: 8
                family: IPv4
              - type: 128
                family: IPv6
              - type: 135
                family: IPv6
